# todolist-htmx-fastapi

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml  tailwind.config.js
src/todolist/: config.py  entrypoint.py
src/todolist/adapters/: fastapi.py  jinja2.py  repositories.py
src/todolist/bootstrap/: bootstrap.py  scanner.py
src/todolist/domain/: model.py  repositories.py
src/todolist/service/: unit_of_work.py
src/todolist/templates/: index.jinja2  new_item.jinja2  todolist.jinja2
src/todolist/ui/: index.py
src/todolist/ui/components/: todolist.py
src/todolist/ui/static/css/: main.css
src/todolist/ui/templates/: index.jinja2  new_item.jinja2  todolist.jinja2
tests/functionals/: 01_list_todo.feature  99_debug.feature  environment.py  fixtures.py
tests/functionals/steps/: api.py  assertions.py  browse.py  debug.py  form.py  index.py
tests/unittests/: conftest.py  test_repository.py  test_serve_components.py  test_serve_index.py
